@@ -66,6 +66,7 @@ Version 2.4xxx
 - Fixed: Do not save each command response in the shared memory (attribute of the server instance).
 - Fixed: Remove session only when the Logout command has been executed.
 - Fixed: Fix a cache refresh issue by respecting HTTP standard (HTTP 304 and 204).
+- Fixed: Remove unnecessary session attribute _tWebEmSession::lastRequestPath (used to check the request URI).
 - Updated: OpenZWave, configuration files
 
 Version 2.3530 (November 1th 2015)
